scss/_globals.scss
html {
  font-size: 62.5%; // 100% of base font size set in browser (16px by default)
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  background: $color-dark-grey;
  color: $color-off-white;
  margin: 0;
  padding: 0;
}

.container {
  display: grid;
  grid-template-rows: min-content min-content min-content;
  grid-template-columns: 3vw 1fr 3vw;
  overflow: hidden;

  &.scroll-lock {
    overflow: hidden;
  }

  @media only screen and (max-width: $bp-medium) {
    grid-template-columns: 5.5vw 1fr 5.5vw;
  }
}

html,
body {
  // cursor: none;
}

.no-cursor {
  cursor: none;
}

.cursor {
  pointer-events: none;
  position: fixed;
  padding: 0.4rem;
  background-color: $color-off-white;
  border-radius: 50%;
  transition: transform 0.3s ease;
  transform: translate(-50%, -50%);
  z-index: 1;
  mix-blend-mode: difference;
}

.cursor-2 {
  pointer-events: none;
  position: fixed;
  padding: 3.5rem;
  background-color: $color-off-white;
  border-radius: 50%;
  transition: transform 0.3s ease;
  transform: translate(-50%, -50%);
  z-index: 1;
  opacity: 0.1;
  mix-blend-mode: difference;
}

.cursor-view-project-text {
  text-align: center;
  display: none;
  transition: transform 0.3s ease;
}

.cursor-view-project-text-active {
  display: block;
}

.animate-cursor {
  transform: translate(-50%, -50%) scale(3.5);
  opacity: 1;
}

.animate-cursor-2 {
  transform: translate(-50%, -50%) scale(0);
}

.animate-cursor-big {
  transform: translate(-50%, -50%) scale(15);
  opacity: 1;
}

.you-smart-gif {
  display: none;
}

.troy-abed-handshake-gif {
  display: none;
}

.profile-pic {
  height: 80rem;
  position: relative;

  &--wave-emoji {
    font-size: 4rem;
    position: absolute;
    left: 3.5rem;
    bottom: 3rem;
    font-family: $font-intro-text;
  }
}

.wave {
  display: inline-block;
  animation: wave 1s infinite ease-in-out;
  transform-origin: bottom right;
}

@keyframes wave {
  50% {
    transform: rotate(30deg);
  }
}

.profile-pic__container {
  display: none;
}

.gif-active {
  display: block;
}

.animate-cursor-gif {
  mix-blend-mode: unset;
  border-radius: 100%;
  background-color: transparent;
  padding: 0;
  display: block;
}

.animate-cursor-view-project {
  transform: translate(-50%, -50%) scale(3);
  mix-blend-mode: unset;
  padding: 0.7rem;
  opacity: 1;
}

.cursors div {
  pointer-events: none;
  position: fixed;
  padding: 0.3rem;
  background-color: $color-off-white;
  border-radius: 50%;
  transition: transform 0.3s ease;
  transform: translate(-50%, -50%);
  z-index: 1;
}

h1 {
  font-family: $font-heading;
  font-style: normal;
  text-transform: uppercase;
}

h3 {
  color: $color-dark-grey;
  font-family: $font-heading;
  font-weight: 500;
  font-size: 2rem;
}

h4 {
  color: $color-dark-grey;
  font-family: europa, sans-serif;
  // font-family: $font-primary;

  font-size: 1.4rem;
  font-weight: 300;
  opacity: 0.8;
}

h5 {
  color: $color-dark-grey;
  font-family: $font-intro-text;
  font-size: 0.001rem;
  font-weight: 400;
  // letter-spacing: 1.2rem;
  line-height: 0.8rem;
}

p {
  font-family: $font-secondary;
  // font-family: $font-intro-text;

  font-weight: 400;
  font-size: 1.2rem;
  // font-size: 2rem;
  // letter-spacing: .2rem;
  text-transform: uppercase;

  //Option 2
  // font-family: $font-intro-text;
  // font-size: 1.5rem;
  // letter-spacing: .2em;
}

.loading-screen {
  position: absolute;
  width: 100%;
  height: 100vh;
  background: $color-loading-screen;
  z-index: 9004;
}

.loading-screen-addition {
  position: absolute;
  width: 100%;
  height: 100vh;
  background: $color-off-white;
  z-index: 9001;
}

.loading-intro {
  margin: 0;
  padding: 0;
  top: 50%;
  text-align: center;
  position: absolute;
  z-index: 9004;
  width: 100%;
  visibility: hidden;

  &__text {
    margin: 0;
    font-family: $font-intro-text;
    font-size: 2.4rem;
    font-weight: 400;
    letter-spacing: 1.2rem;
    display: inline-block;

    &--last-name {
      padding-left: 1.3rem;
    }
  }

  &__cover {
    background-color: $color-loading-screen;
    width: 25rem;
    height: 20px;
    margin: 0 auto;
    z-index: 9002;
    position: relative;
  }
}

.mobile-menu {
  display: none;
  background-color: rgba(23, 23, 23, 1);
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  z-index: 9002;
  padding: 2.5rem;
  padding-top: 7rem;

  &__content {
    & a {
      text-decoration: none;
      color: $color-off-white;
    }

    h2 {
      font-size: 2.4rem;
      font-family: $font-intro-text;
      font-weight: 300;
      letter-spacing: 1.2rem;
    }
  }

  &.open {
    display: block;
  }
}

@keyframes fade-in-links {
  0% {
    visibility: hidden;
    opacity: 0;
    transform: translateY(20px);
  }
  100% {
    visibility: visible;
    opacity: 1;
    transform: translate(0);
  }
}

.fade-in-links--about {
  animation: fade-in-links 0.3s ease-in-out forwards;
}

.fade-in-links--projects {
  animation: fade-in-links 0.6s ease-in-out forwards;
}

